<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textColor="@color/colorAccent"
        android:text="@string/title_activity_login"
        android:gravity="center"
        android:fontFamily="sans-serif-light"
        />

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/title_textview"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/username_wrapper">

        <AutoCompleteTextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_wrapper"
        android:id="@+id/password_wrapper">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>


    <android.support.v7.widget.SwitchCompat
        android:id="@+id/remember_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_wrapper"
        android:layout_marginTop="@dimen/activity_vertical_margin"

        android:text="@string/option_remember_credentials" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/request_credentials_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/remember_switch"
        android:layout_marginTop="@dimen/activity_vertical_margin"

        android:text="@string/option_request_credentials"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/login_form"
        android:orientation="vertical">
        <Button
            android:id="@+id/email_sign_in_button"
            style="@style/OvalButton"
            android:backgroundTint="@color/colorPrimaryLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in_short"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>


        <TextView
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/action_register"
            android:textSize="12sp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:onClick="attemptRegister"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    </LinearLayout>


</RelativeLayout>