<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ProgressBar
        android:id="@+id/register_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:paddingTop="10dp" android:paddingBottom="10dp"
                android:textColor="@color/colorAccent"
                android:fontFamily="sans-serif-light"
                android:gravity="start"
                android:text="@string/title_patient"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/username_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/hint_username" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/hint_nume" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_country"/>

            <Spinner
                android:id="@+id/country_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_city"/>

            <Spinner
                android:id="@+id/city_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirm_password_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/hint_confirm_password" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/adresa_cabinet_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:hint="@string/hint_adresa_cabinet" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/descriere_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/hint_descriere" />
            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/illnesses_list_hint_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="Bifeaza"
                />

            <ProgressBar
                android:id="@+id/illnesses_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/disease_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp" />

            <Button
                android:id="@+id/goToQuiz_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape_oval"
                android:text="@string/message_quiz_forwarder"
                android:textSize="13sp"
                android:onClick="forwardToQuizEvent"
                />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"
                android:layout_margin="10dp"/>

            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_white"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/colorBackground"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:onClick="attemptRegister"
                android:text="Register"
                />


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</FrameLayout>